--- a/ProyectoBiblioteca/App.xaml
+++ b/ProyectoBiblioteca/App.xaml
@@ -2,11 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ProyectoBiblioteca"
-             StartupUri="MainWindow.xaml">
+             StartupUri="AgregarUsuarioVentana.xaml">
     <Application.Resources>
 
         <Style TargetType="Label">
-            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontSize" Value="15"/>
             <Setter Property="FontFamily" Value="Arial"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="Foreground" Value="#DBDBDB"/>
@@ -16,8 +16,11 @@
 
 
         <Style TargetType="Button">
-            <Setter Property="Background" Value="#FF2C3E50"/>
-            <Setter Property="Foreground" Value="#DBDBDB"/>
+            <!--<Setter Property="Background" Value="#FF2C3E50"/>
+            <Setter Property="Foreground" Value="#DBDBDB"/>-->
+
+            <Setter Property="Background" Value="#A3CFCD"/>
+            <Setter Property="Foreground" Value="Black"/>
             <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="FontSize" Value="20"/>
