--- a/ProyectoBiblioteca/MainWindow.xaml
+++ b/ProyectoBiblioteca/MainWindow.xaml
@@ -20,13 +20,13 @@
 
         <!-- Menú de navegación -->
         <StackPanel Orientation="Vertical" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,50">
-            <Button Content="Inventario" Margin="0,10,0,0"/>
-            <Button Content="Préstamos" Margin="0,10,0,0" />
-            <Button Content="Devoluciones" Margin="0,10,0,0" />
-            <Button Content="Usuarios" Margin="0,10,0,0" />
-            <Button Content="Catálogo" Margin="0,10,0,0" />
-            <Button Content="Sanciones" Margin="0,10,0,0" />
-            <Button Content="Informes" Margin="0,10,0,0" />
+            <Button Content="Inventario" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
+            <Button Content="Préstamos" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
+            <Button Content="Devoluciones" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
+            <Button Content="Usuarios" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
+            <Button Content="Catálogo" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
+            <Button Content="Sanciones" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
+            <Button Content="Informes" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
         </StackPanel>
 
         <!-- Línea de separación -->
@@ -34,21 +34,21 @@
 
         <!-- Parte principal -->
         <Grid Grid.Column="1">
-            <Label x:Name="labelPrincipal" Content="GESTIÓN BIBLIOTECA - INVENTARIO" HorizontalAlignment="Center" Margin="230,10,212,0" VerticalAlignment="Top" Height="60" Width="400" FontWeight="Bold" FontSize="20" />
+            <Label x:Name="labelPrincipal" Content="GESTIÓN BIBLIOTECA - INVENTARIO" HorizontalAlignment="Center" Margin="231,10,171,0" VerticalAlignment="Top" Height="60" Width="450" FontWeight="Bold" FontSize="24" />
 
-            <TextBox x:Name="txtBusqueda" HorizontalAlignment="Left" Height="30" Margin="248,111,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="320"/>
-
-
-            <DataGrid x:Name="gridResultados" AutoGenerateColumns="True" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" IsReadOnly="True" Margin="99,200,62,23" MaxHeight="300" MaxWidth="800" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto"/>
+            <TextBox x:Name="txtBusqueda" HorizontalAlignment="Left" Height="30" Margin="248,106,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="320"/>
 
 
-            <Button Content="Buscar Libro" HorizontalAlignment="Left" Margin="78,152,0,0" VerticalAlignment="Top" Width="152" Click="buscarLibro"/>
+            <DataGrid x:Name="gridResultados" AutoGenerateColumns="True" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" IsReadOnly="True" Margin="76,210,106,32" MaxHeight="300" MaxWidth="800" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto"/>
 
-            <Button Content="Buscar Pelicula" HorizontalAlignment="Left" Margin="302,152,0,0" VerticalAlignment="Top" Width="180" Click="buscarPelicula"/>
 
-            <Button Content="Ver todo el catalogo" HorizontalAlignment="Left" Margin="538,158,0,0" VerticalAlignment="Top" Width="200"/>
+            <Button Content="Buscar Libro" HorizontalAlignment="Left" Margin="96,164,0,0" VerticalAlignment="Top" Width="152" Click="buscarLibro"/>
 
-            <Label Content="Realice su busqueda por ISBN, Titulo o Director" HorizontalAlignment="Left" Margin="248,70,0,0" VerticalAlignment="Top" Height="41" Width="330" FontSize="15"/>
+            <Button Content="Buscar Pelicula" HorizontalAlignment="Left" Margin="308,164,0,0" VerticalAlignment="Top" Width="180" Click="buscarPelicula"/>
+
+            <Button Content="Ver todo el catalogo" HorizontalAlignment="Left" Margin="538,164,0,0" VerticalAlignment="Top" Width="200"/>
+
+            <Label Content="Realice su busqueda por ISBN, Titulo o Director" HorizontalAlignment="Left" Margin="248,65,0,0" VerticalAlignment="Top" Height="41" Width="330" FontSize="15"/>
 
 
         </Grid>
