--- a/ProyectoBiblioteca/MainWindow.xaml
+++ b/ProyectoBiblioteca/MainWindow.xaml
@@ -34,9 +34,14 @@
 
         <!-- Parte principal -->
         <Grid Grid.Column="1">
-            <Label x:Name="labelPrincipal" Content="GESTIÓN BIBLIOTECA - INVENTARIO" HorizontalAlignment="Center" Margin="231,10,171,0" VerticalAlignment="Top" Height="60" Width="450" FontWeight="Bold" FontSize="24" />
+            <Label x:Name="labelPrincipal" Content="GESTIÓN BIBLIOTECA - INVENTARIO" HorizontalAlignment="Center" Margin="227,10,150,0" VerticalAlignment="Top" Height="70" Width="470" FontWeight="Bold" FontSize="24" />
 
-            <TextBox x:Name="txtBusqueda" HorizontalAlignment="Left" Height="30" Margin="248,106,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="320"/>
+            <Button Content="?" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0" Click="MostrarAyuda_Click"/>
+
+            <Label Content="Ingrese el parámetro para la búsqueda" HorizontalAlignment="Center" Margin="303,70,262,0" VerticalAlignment="Top" Height="32" Width="279" FontSize="15"/>
+
+
+            <TextBox x:Name="txtBusqueda" HorizontalAlignment="Center" Height="20" Margin="0,100,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="350"/>
 
 
             <DataGrid x:Name="gridResultados" AutoGenerateColumns="True" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" IsReadOnly="True" Margin="76,210,106,32" MaxHeight="300" MaxWidth="800" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto"/>
@@ -44,11 +49,10 @@
 
             <Button Content="Buscar Libro" HorizontalAlignment="Left" Margin="96,164,0,0" VerticalAlignment="Top" Width="152" Click="buscarLibro"/>
 
-            <Button Content="Buscar Pelicula" HorizontalAlignment="Left" Margin="308,164,0,0" VerticalAlignment="Top" Width="180" Click="buscarPelicula"/>
+            <Button Content="Buscar Pelicula" HorizontalAlignment="Left" Margin="313,164,0,0" VerticalAlignment="Top" Width="180" Click="buscarPelicula"/>
 
             <Button Content="Ver todo el catalogo" HorizontalAlignment="Left" Margin="538,164,0,0" VerticalAlignment="Top" Width="200"/>
 
-            <Label Content="Realice su busqueda por ISBN, Titulo o Director" HorizontalAlignment="Left" Margin="248,65,0,0" VerticalAlignment="Top" Height="41" Width="330" FontSize="15"/>
 
 
         </Grid>
