--- a/ProyectoBiblioteca/MainWindow.xaml
+++ b/ProyectoBiblioteca/MainWindow.xaml
@@ -20,13 +20,13 @@
 
         <!-- Menú de navegación -->
         <StackPanel Orientation="Vertical" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,50">
-            <Button Content="Inventario" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
-            <Button Content="Préstamos" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
-            <Button Content="Devoluciones" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
-            <Button Content="Usuarios" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
-            <Button Content="Catálogo" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
-            <Button Content="Sanciones" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
-            <Button Content="Informes" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"/>
+            <Button Content="Inventario" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaInventario"/>
+            <Button Content="Préstamos" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaPrestamos"/>
+            <Button Content="Devoluciones" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaDevoluciones"/>
+            <Button Content="Usuarios" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaUsuarios"/>
+            <Button Content="Catálogo" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaCatalogo"/>
+            <Button Content="Sanciones" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaSanciones"/>
+            <Button Content="Informes" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaInformes"/>
         </StackPanel>
 
         <!-- Línea de separación -->
