--- a/ProyectoBiblioteca/MainWindow.xaml
+++ b/ProyectoBiblioteca/MainWindow.xaml
@@ -1,55 +1,35 @@
 ﻿<Window x:Class="ProyectoBiblioteca.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProyectoBiblioteca"
-        mc:Ignorable="d"    
-        Title="MainWindow" Height="500" Width="1000" ResizeMode="NoResize">
+        Title="MainWindow" Height="500" Width="1000" ResizeMode="NoResize"  >
 
-    <Grid Background="#FF2C3E50">
+    <Grid Background="#354e68">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="100"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <!-- Menu lateral -->
 
-        <!-- Logo -->
-        <Image Source="Images\logoBiblioteca.jpg" Grid.ColumnSpan="1" HorizontalAlignment="Center" Height="111" VerticalAlignment="Top" Width="116" Margin="0,20,0,0"/>
+        <Image Source="Images\logoBiblioteca.jpg" Stretch="Uniform" Margin="0,20,0,0" VerticalAlignment="Top" Height="75" Width="120"/>
 
-        <!-- Menú de navegación -->
-        <StackPanel Orientation="Vertical" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,0,0,50">
-            <Button Content="Inventario" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaInventario"/>
-            <Button Content="Préstamos" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaPrestamos"/>
-            <Button Content="Devoluciones" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaDevoluciones"/>
-            <Button Content="Usuarios" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaUsuarios"/>
-            <Button Content="Catálogo" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaCatalogo"/>
-            <Button Content="Sanciones" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaSanciones"/>
-            <Button Content="Informes" Margin="0,10,0,0" Background="#FF2C3E50" Foreground="#DBDBDB"  Click="AbrirVentanaInformes"/>
-        </StackPanel>
+
+        <ListBox Grid.Column="0" x:Name="sidebar" Margin="0,110,0,50" BorderThickness="0" Background="#354e68">
+            <local:NavButton Margin="3" Padding="6" Icon="/Images/logoBiblioteca.jpg"/>
+            <local:NavButton Margin="3" Padding="6" Icon="/Images/logoBiblioteca.jpg"/>
+            <local:NavButton Margin="3" Padding="6" Icon="/Images/logoBiblioteca.jpg"/>
+            <local:NavButton Margin="3" Padding="6" Icon="/Images/logoBiblioteca.jpg"/>
+            <!--<local:NavButton Navlink="/Pages/Page2.xaml" Margin="3" Padding="6" Icon="/Assets/Icono2.png"/>-->
+        </ListBox>
 
         <!-- Línea de separación -->
         <Border Grid.Column="0" BorderBrush="#022038" BorderThickness="0,0,5,0" VerticalAlignment="Stretch"/>
 
         <!-- Parte principal -->
-        <Grid Grid.Column="1">
-            <Label x:Name="labelPrincipal" Content="GESTIÓN BIBLIOTECA - INVENTARIO" HorizontalAlignment="Center" Margin="227,10,150,0" VerticalAlignment="Top" Height="70" Width="470" FontWeight="Bold" FontSize="24" />
 
-            <Button Content="?" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0" Click="MostrarAyuda_Click"/>
+        <Frame Grid.Column="1" x:Name="navFrame" Background="#022038" >
 
-            <Label Content="Ingrese el parámetro para la búsqueda" HorizontalAlignment="Center" Margin="303,70,262,0" VerticalAlignment="Top" Height="32" Width="279" FontSize="15"/>
-
-            <TextBox x:Name="txtBusqueda" HorizontalAlignment="Center" Height="20" Margin="0,100,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="350"/>
-
-            <DataGrid x:Name="gridResultados" AutoGenerateColumns="True" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" IsReadOnly="True" 
-                      Margin="76,210,106,32" MaxHeight="300" MaxWidth="800" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" />
-
-            <Button Content="Buscar Libro" HorizontalAlignment="Left" Margin="450,144,0,0" VerticalAlignment="Top" Width="200" Click="buscarLibro" Height="43"/>
-
-            <Button Content="Buscar Pelicula" HorizontalAlignment="Left" Margin="198,144,0,0" VerticalAlignment="Top" Width="200" Click="buscarPelicula" Height="43" />
-
-        </Grid>
+        </Frame>
 
     </Grid>
 </Window>
