--- a/ProyectoBiblioteca/MainWindow.xaml
+++ b/ProyectoBiblioteca/MainWindow.xaml
@@ -11,27 +11,49 @@
         </Grid.ColumnDefinitions>
 
 
-        <Image  Source="/Images/logoBiblioteca.jpg" Stretch="Uniform" Margin="0,20,0,0" VerticalAlignment="Top" Height="75" Width="120"/>
+        <!--LOGO IMAGEN-->
+        <Image x:Name="logoImage" Source="/Images/logoBiblioteca.jpg" Stretch="Uniform" Margin="0,10,0,0" VerticalAlignment="Top" Height="70" Width="120">
+            <Image.Effect>
+                <DropShadowEffect ShadowDepth="0" BlurRadius="10" Color="#DEA01E" Opacity="0"/>
+            </Image.Effect>
+            <Image.Triggers>
+                <EventTrigger RoutedEvent="MouseEnter">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="logoImage" Storyboard.TargetProperty="Effect.Opacity" To="0.5" Duration="0:0:0.2"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+                <EventTrigger RoutedEvent="MouseLeave">
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="logoImage" Storyboard.TargetProperty="Effect.Opacity" To="0" Duration="0:0:0.2"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </EventTrigger>
+            </Image.Triggers>
+        </Image>
+        <!--LOGO IMAGEN-->
 
 
-        <ListBox Grid.Column="0" SelectionChanged="sidebar_SelectionChanged" x:Name="sidebar" Margin="0,110,0,50" BorderThickness="0">
-            <local:NavButton Navlink="/Pages/VentanaInventario.xaml" Margin="3" Padding="6" Icon="/Images/Icons/caja.png"/>
-            <local:NavButton Margin="3" Padding="6" Icon="/Images/Icons/catalogo.png"/>
-            <local:NavButton Margin="3" Padding="6" Icon="/Images/Icons/usuarios.png"/>
-            <local:NavButton Margin="3" Padding="6" Icon="/Images/Icons/prestamo.png"/>
-           
-           
-            <!--<local:NavButton Navlink="/Pages/Page2.xaml" Margin="3" Padding="6" Icon="/Assets/Icono2.png"/>-->
+        <ListBox Grid.Column="0" SelectionChanged="Menu_Seleccionado" x:Name="sidebar" Margin="0,85,0,30" BorderThickness="0" Background="#022038" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+            <local:NavButton Navlink="/Pages/VentanaInventario.xaml"  Margin="3" Padding="6" Icon="/Images/Icons/catalogo.png"/>
+            <local:NavButton  Margin="3" Padding="6" Icon="/Images/Icons/stock.png"/>
+            <local:NavButton  Margin="3" Padding="6" Icon="/Images/Icons/users.png"/>
+            <local:NavButton  Margin="3" Padding="6" Icon="/Images/Icons/prestar.png"/>
+            <local:NavButton  Margin="3" Padding="6" Icon="/Images/Icons/informe.png"/>
         </ListBox>
 
         <!-- Línea de separación -->
-        <Border Grid.Column="0" BorderBrush="#022038" BorderThickness="0,0,5,0" VerticalAlignment="Stretch"/>
+        <Border Grid.Column="0" BorderBrush="#6DA6C9" BorderThickness="0,0,5,0" VerticalAlignment="Stretch"/>
 
         <!-- Parte principal -->
 
-        <Frame Grid.Column="1" x:Name="navFrame" Background="#4d647a" >
+        <Frame Grid.Column="1" x:Name="navFrame" Background="#4d647a" NavigationUIVisibility="Hidden"/>
 
-        </Frame>
+
+
+
 
     </Grid>
 </Window>
