--- a/ProyectoBiblioteca/MainWindow.xaml
+++ b/ProyectoBiblioteca/MainWindow.xaml
@@ -36,6 +36,7 @@
         <!--LOGO IMAGEN-->
 
 
+        <!--Menu-->
         <ListBox Grid.Column="0" SelectionChanged="Menu_Seleccionado" x:Name="sidebar" Margin="0,85,0,30" BorderThickness="0" Background="#022038" ScrollViewer.VerticalScrollBarVisibility="Disabled">
             <local:NavButton Navlink="/Pages/VentanaInventario.xaml"  Margin="3" Padding="6" Icon="/Images/Icons/catalogo.png"/>
             <local:NavButton  Margin="3" Padding="6" Icon="/Images/Icons/stock.png"/>
@@ -43,12 +44,12 @@
             <local:NavButton  Margin="3" Padding="6" Icon="/Images/Icons/prestar.png"/>
             <local:NavButton  Margin="3" Padding="6" Icon="/Images/Icons/informe.png"/>
         </ListBox>
+        <!--Menu-->
 
         <!-- Línea de separación -->
         <Border Grid.Column="0" BorderBrush="#6DA6C9" BorderThickness="0,0,5,0" VerticalAlignment="Stretch"/>
 
-        <!-- Parte principal -->
-
+        <!-- Page cambiante -->
         <Frame Grid.Column="1" x:Name="navFrame" Background="#4d647a" NavigationUIVisibility="Hidden"/>
 
 
