--- a/ProyectoBiblioteca/Pages/VentanaInventario.xaml
+++ b/ProyectoBiblioteca/Pages/VentanaInventario.xaml
@@ -8,8 +8,21 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="VentanaInventario">
 
-    <Grid>
-        <Button Content="PRUEBAAA" HorizontalAlignment="Left" Margin="202,139,0,0" VerticalAlignment="Top" Width="454" Height="182"/>
+    <Grid Background="#4d647a">
+        <Label x:Name="labelPrincipal" Content="GESTIÓN BIBLIOTECA - INVENTARIO" HorizontalAlignment="Center" Margin="227,10,150,0" VerticalAlignment="Top" Height="70" Width="470" FontWeight="Bold" FontSize="24" />
+
+        <Button Content="?" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0" Click="MostrarAyuda_Click"/>
+
+        <Label Content="Ingrese el parámetro para la búsqueda" HorizontalAlignment="Center" Margin="303,70,262,0" VerticalAlignment="Top" Height="32" Width="279" FontSize="15"/>
+
+        <TextBox x:Name="txtBusqueda" HorizontalAlignment="Center" Height="20" Margin="0,100,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="350"/>
+
+        <DataGrid x:Name="gridResultados" AutoGenerateColumns="True" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" IsReadOnly="True" 
+                      Margin="76,210,106,32" MaxHeight="300" MaxWidth="800" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" />
+
+        <Button Content="Buscar Libro" HorizontalAlignment="Left" Margin="450,144,0,0" VerticalAlignment="Top" Width="200" Click="buscarLibro" Height="43"/>
+
+        <Button Content="Buscar Pelicula" HorizontalAlignment="Left" Margin="198,144,0,0" VerticalAlignment="Top" Width="200" Click="buscarPelicula" Height="43" />
 
     </Grid>
 </Page>
