--- a/ProyectoBiblioteca/Pages/VentanaCatalogo.xaml
+++ b/ProyectoBiblioteca/Pages/VentanaCatalogo.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="ProyectoBiblioteca.Pages.VentanaInventario"
+﻿<Page x:Class="ProyectoBiblioteca.Pages.VentanaCatalogo"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,16 +9,16 @@
       Title="VentanaInventario">
 
     <Grid Background="#4d647a">
-        <Label x:Name="labelPrincipal" Content="GESTIÓN BIBLIOTECA - INVENTARIO" HorizontalAlignment="Center" Margin="227,10,150,0" VerticalAlignment="Top" Height="70" Width="470" FontWeight="Bold" FontSize="24" />
+        <Label x:Name="labelPrincipal" Content="GESTIÓN BIBLIOTECA - CATÁLOGO" HorizontalAlignment="Center" Margin="225,10,85,0" VerticalAlignment="Top" Height="70" Width="490" FontWeight="Bold" FontSize="24" />
 
         <Button Content="?" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0" Click="MostrarAyuda_Click"/>
 
-        <Label Content="Ingrese el parámetro para la búsqueda" HorizontalAlignment="Center" Margin="303,70,262,0" VerticalAlignment="Top" Height="32" Width="279" FontSize="15"/>
+        <Label Content="Ingrese el parámetro para la búsqueda" HorizontalAlignment="Center" Margin="281,70,225,0" VerticalAlignment="Top" Height="32" Width="294" FontSize="15"/>
 
         <TextBox x:Name="txtBusqueda" HorizontalAlignment="Center" Height="20" Margin="0,100,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="350"/>
 
         <DataGrid x:Name="gridResultados" AutoGenerateColumns="True" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" IsReadOnly="True" 
-                      Margin="76,210,106,32" MaxHeight="300" MaxWidth="800" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" />
+                      Margin="109,210,73,32" MaxHeight="300" MaxWidth="800" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" />
 
         <Button Content="Buscar Libro" HorizontalAlignment="Left" Margin="450,144,0,0" VerticalAlignment="Top" Width="200" Click="buscarLibro" Height="43"/>
 
