--- a/ProyectoBiblioteca/Pages/VentanaCatalogo.xaml
+++ b/ProyectoBiblioteca/Pages/VentanaCatalogo.xaml
@@ -5,24 +5,24 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ProyectoBiblioteca.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="500" d:DesignWidth="1000"
       Title="VentanaInventario">
 
     <Grid Background="#4d647a">
-        <Label x:Name="labelPrincipal" Content="GESTIÓN BIBLIOTECA - CATÁLOGO" HorizontalAlignment="Center" Margin="193,10,117,0" VerticalAlignment="Top" Height="70" Width="490" FontWeight="Bold" FontSize="24" />
+        <Label x:Name="labelPrincipal" Content="GESTIÓN BIBLIOTECA - CATÁLOGO" HorizontalAlignment="Center" Margin="300,3,176,0" VerticalAlignment="Top" Height="70" Width="500" FontWeight="Bold" FontSize="24" />
 
-        <Button Content="?" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0" Click="MostrarAyuda_Click"/>
+        <Button Content="?" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0" Click="MostrarAyuda_Click" Height="40" Width="39"/>
 
-        <Label Content="Ingrese el parámetro para la búsqueda" HorizontalAlignment="Center" Margin="270,75,236,0" VerticalAlignment="Top" Height="32" Width="294" FontSize="15"/>
+        <Label Content="Ingrese el parámetro [?] para la búsqueda" HorizontalAlignment="Left" Margin="102,94,0,0" VerticalAlignment="Top" Height="30" Width="350" FontSize="18" />
 
-        <TextBox x:Name="txtBusqueda" HorizontalAlignment="Center" Height="20" Margin="225,107,225,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="350"/>
+        <TextBox x:Name="txtBusqueda" HorizontalAlignment="Left" Height="30" Margin="457,94,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="350"/>
 
         <DataGrid x:Name="gridResultados" AutoGenerateColumns="True" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" IsReadOnly="True" 
-                      Margin="116,211,66,31" MaxHeight="300" MaxWidth="800" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" />
+                      Margin="97,232,70,10" MaxHeight="300" MaxWidth="800" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" />
 
-        <Button Content="Buscar Libro" HorizontalAlignment="Left" Margin="416,144,0,0" VerticalAlignment="Top" Width="200" Click="BuscarLibro" Height="43"/>
+        <Button Content="Buscar Libro" HorizontalAlignment="Right" Margin="0,160,160,0" VerticalAlignment="Top" Width="300" Click="BuscarLibro" Height="45"/>
 
-        <Button Content="Buscar Pelicula" HorizontalAlignment="Left" Margin="193,144,0,0" VerticalAlignment="Top" Width="200" Click="BuscarPelicula" Height="43" />
+        <Button Content="Buscar Pelicula" HorizontalAlignment="Left" Margin="160,160,0,0" VerticalAlignment="Top" Width="300" Click="BuscarPelicula" Height="45" />
 
     </Grid>
 </Page>
