--- a/ProyectoBiblioteca/Ventanas/AgregarUsuarioVentana.xaml
+++ b/ProyectoBiblioteca/Ventanas/AgregarUsuarioVentana.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ProyectoBiblioteca.AgregarUsuarioVentana"
+﻿<Window x:Class="ProyectoBiblioteca.Ventanas.AgregarUsuarioVentana"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ProyectoBiblioteca"
+        xmlns:local="clr-namespace:ProyectoBiblioteca.Ventanas"
         mc:Ignorable="d"
         Title="AgregarUsuarioVentana" Height="250" Width="500" Background="#FF2C3E50">
     <Grid Margin="20"  >
