--- a/ProyectoBiblioteca/Ventanas/RegistrarPrestamoWindow.xaml
+++ b/ProyectoBiblioteca/Ventanas/RegistrarPrestamoWindow.xaml
@@ -1,10 +1,9 @@
 ﻿<Window x:Class="ProyectoBiblioteca.Ventanas.RegistrarPrestamoWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Registrar Prestamo" Height="500" Width="800" Background="#FF2C3E50" ResizeMode="NoResize">
+        Title="Registrar Prestamo" Height="385" Width="800" Background="#FF2C3E50" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="125" />
             <RowDefinition Height="125" />
             <RowDefinition Height="125" />
             <RowDefinition Height="125" />
@@ -15,22 +14,22 @@
         </Grid.ColumnDefinitions>
 
         <!-- ListBox y label para seleccionar un libro -->
-        <Label Content="Libro a prestar:" Grid.Row="0" Grid.Column="0" Height="25" Margin="50,0,50,80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <ListBox MouseDoubleClick="ListBox_MouseDoubleClick" x:Name="lstLibros" Grid.Row="0" Grid.Column="0" MaxHeight="90" Margin="50,30,50,0" DisplayMemberPath="Titulo"  VerticalAlignment="Center"/>
+        <Label Content="Libro a prestar:" Grid.Row="0" Grid.Column="0" Height="30" Margin="50,0,50,80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <ListBox MouseDoubleClick="verExistencias" x:Name="lstLibros" Grid.Row="0" Grid.Column="0" MaxHeight="90" Margin="50,45,50,0" DisplayMemberPath="Titulo"  VerticalAlignment="Center"/>
 
         <!-- ListBox y label para seleccionar una película -->
-        <Label Content="Película a prestar:" Grid.Row="0" Grid.Column="1" Height="25" Margin="50,0,50,80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <ListBox MouseDoubleClick="ListBox_MouseDoubleClick" x:Name="lstPeliculas" Grid.Row="0" Grid.Column="1" MaxHeight="90" Margin="50,30,50,0" DisplayMemberPath="Titulo" VerticalAlignment="Center"/>
+        <Label Content="Película a prestar:" Grid.Row="0" Grid.Column="1" Height="30" Margin="50,0,50,80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <ListBox MouseDoubleClick="verExistencias" x:Name="lstPeliculas" Grid.Row="0" Grid.Column="1" MaxHeight="90" Margin="50,45,50,0" DisplayMemberPath="Titulo" VerticalAlignment="Center"/>
 
         <!-- ListBox y label para seleccionar un usuario -->
-        <Label Content="Usuario que recibe el préstamo:" Grid.Row="1" Grid.Column="0" Height="25" Margin="50,0,50,80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <ListBox x:Name="lstUsuarios" Grid.Row="1" Grid.Column="0" MaxHeight="90" Margin="50,30,50,0" DisplayMemberPath="Nombre" VerticalAlignment="Center"/>
+        <Label Content="Usuario que recibe el préstamo:" Grid.Row="1" Grid.Column="0" Height="30" Margin="50,0,50,80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <ListBox MouseDoubleClick="verSancion" x:Name="lstUsuarios" Grid.Row="1" Grid.Column="0" MaxHeight="90" Margin="50,45,50,0" DisplayMemberPath="Nombre" VerticalAlignment="Center"/>
 
         <!-- Campo de fecha de devolución y label -->
-        <Label Content="Fecha de devolución:" Grid.Row="1" Grid.Column="1" Height="25" Margin="50,0,50,80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <DatePicker x:Name="dpFechaDevolucion" Grid.Row="1" Grid.Column="1" Margin="50,30,50,0" VerticalAlignment="Center"/>
+        <Label Content="Fecha de devolución:" Grid.Row="1" Grid.Column="1" Height="30" Margin="50,0,50,80" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <DatePicker x:Name="dpFechaDevolucion" Grid.Row="1" Grid.Column="1" Margin="50,45,50,0" VerticalAlignment="Center"/>
 
         <!-- Botón para registrar el préstamo -->
-        <Button x:Name="btnRegistrar" Grid.Row="4" Grid.ColumnSpan="2" Margin="50,10,50,50" Content="Registrar Préstamo" Click="Registrar_Click" />
+        <Button x:Name="btnRegistrar" Grid.Row="2" Grid.ColumnSpan="2" Margin="50,10,50,50" Content="Registrar Préstamo" Click="Registrar_Click" />
     </Grid>
 </Window>
