--- a/ProyectoBiblioteca/Pages/VentanaInventario.xaml
+++ b/ProyectoBiblioteca/Pages/VentanaInventario.xaml
@@ -11,8 +11,10 @@
     <Grid Background="#4d647a">
         <Label x:Name="labelPrincipal" Content="GESTIÓN BIBLIOTECA - INVENTARIO" HorizontalAlignment="Center" Margin="180,10,130,0" VerticalAlignment="Top" Height="70" Width="490" FontWeight="Bold" FontSize="24" />
 
+        <Label x:Name="labelViendo" Content="" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,30,20,50" FontSize="18" FontWeight="SemiBold"  Height="50" Width="380"/>
+
         <DataGrid x:Name="gridResultados" AutoGenerateColumns="True" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserReorderColumns="False" IsReadOnly="True" 
-                      Margin="97,216,68,26" MaxHeight="300" MaxWidth="800" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto"  />
+                      Margin="106,250,81,24" MaxHeight="280" MaxWidth="800" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto"  />
 
         <Button Content="Agregar libro" HorizontalAlignment="Left" Margin="27,80,0,0" VerticalAlignment="Top" Width="200" Click="AgregarLibro" Height="43" />
         <Button Content="Agregar película" HorizontalAlignment="Left" Margin="27,147,0,0" VerticalAlignment="Top" Width="200" Click="AgregarPelicula" Height="43"/>
@@ -21,7 +23,7 @@
         <Button Content="Ver todas las películas" HorizontalAlignment="Left" Margin="260,147,0,0" VerticalAlignment="Top" Width="220" Click="VerPeliculas" Height="43"/>
         
         <Button Content="Eliminar libro" HorizontalAlignment="Left" Margin="514,85,0,0" VerticalAlignment="Top" Width="200" Click="EliminarLibro" Height="43"/>
-        <Button Content="Eliminar película" HorizontalAlignment="Left" Margin="514,147,0,0" VerticalAlignment="Top" Width="200" Click="EliminarPeliculas" Height="43"/>
+        <Button Content="Eliminar película" HorizontalAlignment="Left" Margin="514,147,0,0" VerticalAlignment="Top" Width="200" Click="EliminarPelicula" Height="43"/>
         <Button Content="Editar libro" HorizontalAlignment="Left" Margin="762,85,0,0" VerticalAlignment="Top" Width="200" Click="EditarLibro" Height="43"/>
         <Button Content="Editar película" HorizontalAlignment="Left" Margin="762,147,0,0" VerticalAlignment="Top" Width="200" Click="EditarPelicula" Height="43"/>
 
